Added code to draw shapes

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 
         </div>
 
-        <canvas class="shape-canvas" id="main-canvas">
-
-        </canvas>
+        <div class="shape-canvas" id="main-canvas">
+            <div id="circle"></div>
+        </div>
     </div>
     
     <script
